# eval-gated-rag-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
argocd/: application.yaml  project.yaml
helm/eval-gated-rag/: Chart.yaml  values.yaml
helm/eval-gated-rag/templates/: _helpers.tpl  embedding-deployment.yaml  grafana-dashboards.yaml  grafana-deployment.yaml  ingress.yaml  ollama-deployment.yaml  prometheus-alerts.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  qdrant-statefulset.yaml  rag-deployment.yaml  serviceaccount.yaml  vllm-deployment.yaml
scripts/: __init__.py  run_eval.py
src/: __init__.py  config.py  exceptions.py  logging_config.py
src/api/: __init__.py  app.py  routes.py
src/documents/: __init__.py  chunker.py  loader.py  models.py
src/embeddings/: __init__.py  models.py  service.py
src/evaluation/: __init__.py  gold_set.py  metrics.py  runner.py
src/llm/: __init__.py  client.py  models.py  prompts.py
src/observability/: __init__.py  metrics.py
src/rag/: __init__.py  models.py  pipeline.py
src/retrieval/: __init__.py  models.py  retriever.py
src/vectorstore/: __init__.py  models.py  service.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_config.py  test_documents.py  test_embeddings.py  test_evaluation.py  test_exceptions.py  test_health.py  test_llm.py  test_logging.py  test_observability.py  test_rag.py  test_retrieval.py  test_vectorstore.py
